--- a/WeaselTSF/WeaselTSF.vcxproj
+++ b/WeaselTSF/WeaselTSF.vcxproj
@@ -466,6 +466,10 @@
   <ItemGroup>
     <ResourceCompile Include="WeaselTSF.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resource\en_256.ico" />
+    <Image Include="..\resource\zh_256.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
