--- a/WeaselTSF/WeaselTSF.vcxproj.filters
+++ b/WeaselTSF/WeaselTSF.vcxproj.filters
@@ -119,4 +119,12 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resource\zh_256.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\resource\en_256.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
